--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -90,6 +90,6 @@ jobs:
         username: ${{ secrets.FTP_USER }}
         password: ${{ secrets.FTP_PASS }}
         protocol: ftps
-        local-dir: ./WpfPlayGround/WpfPlayGround_msix/appPackage/
+        local-dir: ./WpfPlayGround_msix/
         server-dir: /WpfPlayGround/
 
