--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -89,19 +89,26 @@ jobs:
         $ftpServer = "${{ secrets.FTP_HOST }}"
         $ftpUser = "${{ secrets.FTP_USER }}"
         $ftpPass = "${{ secrets.FTP_PASS }}"
-        $localDir = "$(Get-Location)\WpfPlayGround\WpfPlayGround_msix\appPackage"
+        $localDir = Join-Path $env:GITHUB_WORKSPACE "WpfPlayGround\WpfPlayGround_msix\appPackage"
         $remoteDir = "/WpfPlayGround"
 
         Write-Host "Uploading from $localDir to ftp://$ftpServer$remoteDir"
 
+        if (!(Test-Path $localDir)) {
+          Write-Host "❌ ERROR: Local directory not found!"
+          Get-ChildItem -Path $env:GITHUB_WORKSPACE
+          exit 1
+          }
+
         foreach ($file in Get-ChildItem -Path $localDir -File) {
-        $uri = "ftp://$ftpServer$remoteDir/$($file.Name)"
-        Write-Host "Uploading $uri ..."
-        $webclient = New-Object System.Net.WebClient
-        $webclient.Credentials = New-Object System.Net.NetworkCredential($ftpUser, $ftpPass)
-        $webclient.UploadFile($uri, "STOR", $file.FullName)
+          $uri = "ftp://$ftpServer$remoteDir/$($file.Name)"
+          Write-Host "Uploading $($file.Name)..."
+          $webclient = New-Object System.Net.WebClient
+          $webclient.Credentials = New-Object System.Net.NetworkCredential($ftpUser, $ftpPass)
+          $webclient.UploadFile($uri, "STOR", $file.FullName)
         }
 
         Write-Host "✅ FTP upload completed."
+
 
 
